added workout view
