# OpenAPI.json
@@ -170,17 +170,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/WodServiceResponseModel"
+                  "$ref": "#/components/schemas/WodListServiceResponseModel"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WodServiceResponseModel"
+                  "$ref": "#/components/schemas/WodListServiceResponseModel"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WodServiceResponseModel"
+                  "$ref": "#/components/schemas/WodListServiceResponseModel"
                 }
               }
             }
@@ -521,11 +521,15 @@
         },
         "additionalProperties": false
       },
-      "WodServiceResponseModel": {
+      "WodListServiceResponseModel": {
         "type": "object",
         "properties": {
           "data": {
-            "$ref": "#/components/schemas/Wod"
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Wod"
+            },
+            "nullable": true
           },
           "isSuccess": {
             "type": "boolean"
